--- a/boilerplate/css/justifyContent.css
+++ b/boilerplate/css/justifyContent.css
@@ -5,3 +5,33 @@ body {
 .flex-container {
     flex-direction: row;
 }
+
+.start{
+    justify-content: flex-start;
+}
+.end {
+    justify-content: flex-end;
+}
+.center {
+    justify-content: center;
+}
+
+.column-center {
+    flex-direction: column;
+    justify-content: center;
+    height: 600px;
+}
+
+.space-around {
+    justify-content: space-around;
+}
+
+.space-between {
+    justify-content: space-between;
+}
+
+.column-between {
+    flex-direction: column;
+    justify-content: space-between;
+    height: 600px;
+}
