--- a/boilerplate/css/alignSelf.css
+++ b/boilerplate/css/alignSelf.css
@@ -7,3 +7,19 @@ body {
     height: 240px;
     align-items: flex-start;
 }
+
+.sample1 div:nth-child(2) {
+    align-self: flex-start;
+}
+
+.sample2 div:nth-child(2) {
+    align-self: flex-end;
+}
+
+.sample3 div:nth-child(2) {
+    align-self: center;
+}
+
+.sample4 div:nth-child(2) {
+    align-self: stretch;
+}
