--- a/boilerplate/css/flexBasis.css
+++ b/boilerplate/css/flexBasis.css
@@ -6,3 +6,14 @@ body {
     flex-direction: row;
     justify-content: flex-start;
 }
+
+.sample1 div:nth-child(2) {
+    flex-basis: 200px;
+}
+
+.sample2 div:nth-child(2) {
+    flex-basis: 33%;
+}
+.sample2 {
+    flex-grow: 1;
+}
